reorganize notes